# orion-ai-platform

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: chat.py
app/core/: config.py  constants.py  exceptions.py  handler.py  logger.py  security.py
app/infra/db/: crud.py  db.py  pgsql.py
app/infra/llm/: __init__.py  base.py  client.py  factory.py  message_adapter.py  qwen_provider.py  zhipu_client.py  zhipu_provider.py
app/infra/llm/providers/: openai_compatible.py
app/models/: __init__.py  base.py  mixins.py
app/models/chat/: chat_message.py  chat_session.py
app/prompts/: __init__.py
app/prompts/chat/: general.yaml
app/repository/: chat_message_repository.py  chat_session_repository.py
app/schemas/: base.py  chat.py  message.py  result.py  usage.py
app/services/: chat_service.py
resources/db/schema/: init.sql
